# chapkit

./: .codecov.yml  .gitignore  404.html  CLAUDE.md  DESIGN_DATAFRAME_MIGRATION.md  Dockerfile  Dockerfile.r  EXAMPLE_TESTING_REPORT.md  Makefile  README.md  ROADMAP.md  TODO.md  WEB_CONSOLE_ROADMAP.md  alembic.ini  chapkit-py.Dockerfile  chapkit-r-inla.Dockerfile  chapkit-r.Dockerfile  compose.yml  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: dependabot.yml
.github/workflows/: ci.yml  docker.yml  docs.yml  release.yml  test.yml
alembic/: env.py
alembic/versions/: 20251010_0927_4d869b5fb06e_initial_schema.py
api-reference/: index.html
designs/: artifact-storage-backends.md  shell-runner-refactor.md  task-system-simplification.md  typed-artifact-data.md  workspace-artifact-storage.md
docs/: api-reference.md  index.md
docs/guides/: artifact-storage.md  cli-scaffolding.md  configuration-management.md  database-migrations.md  dataframe.md  deploying-to-chap-core.md  ml-workflows.md  mlproject-migrate.md  mlproject-migration-checklist.md  mlproject-runner.md  monitoring.md  r-quickstart.md  shell-runner-contract.md  task-execution.md  testing-ml-services.md  web-console-roadmap.md  web-console.md
examples/: artifact_api.py  config_api.py  config_artifact_api.py  config_with_artifacts.py  demo1.py  full_featured_api.py  library_usage_api.py  ml_basic.py  ml_class.py  ml_pipeline.py  ml_shell.py  python_task_execution_api.py  readonly_task_api.py  task_execution_api.py
examples/artifact/: Dockerfile  README.md  compose.yml  main.py  postman_collection.json  pyproject.toml
examples/artifact_manager/: 01_basic_artifacts.py  02_hierarchical_artifacts.py  03_generic_artifacts.py  README.md
examples/config/: Dockerfile  README.md  compose.yml  main.py  pyproject.toml
examples/config_artifact/: Dockerfile  compose.yml  main.py  postman_collection.json  pyproject.toml
examples/config_basic/: Dockerfile  compose.yml  main.py  postman_collection.json  pyproject.toml
examples/custom_migrations/: README.md  alembic.ini  alembic_helpers.py  main.py  models.py
examples/dataframe_usage/: README.md  advanced_features_example.py  analytics_example.py  api_integration_example.py  column_operations_example.py  csv_example.py  inspection_example.py  json_example.py  pandas_example.py  polars_example.py  validation_example.py  xarray_example.py
examples/docker/: README.md  compose.class.yml  compose.functional.yml  compose.ml-full.yml  compose.ml-monitoring.yml  compose.monitoring.yml  compose.shell.yml
examples/full_featured/: Dockerfile  compose.yml  main.py  postman_collection.json  pyproject.toml
examples/library_usage/: Dockerfile  README.md  compose.yml  main.py  postman_collection.json  pyproject.toml
examples/ml_basic/: Dockerfile  compose.yml  main.py  pyproject.toml
examples/ml_class/: Dockerfile  README.md  compose.yml  main.py  postman_collection.json  pyproject.toml
examples/ml_functional/: Dockerfile  compose.yml  main.py  postman_collection.json  pyproject.toml
examples/ml_pipeline/: Dockerfile  compose.yml  main.py  pyproject.toml
examples/ml_r/: README.md  main.py  model.R  pyproject.toml
examples/ml_shell/: Dockerfile  compose.yml  main.py  postman_collection.json  pyproject.toml
examples/ml_shell/lib/: __init__.py  validation.py
examples/ml_shell/prometheus/: prometheus.yml
examples/ml_shell/scripts/: predict_model.py  train_model.py
examples/ml_stateless/: main.py  pyproject.toml
examples/quickstart/: Dockerfile  compose.yml  main.py  pyproject.toml
examples/task_execution/: Dockerfile  compose.yml  main.py  postman_collection.json  pyproject.toml
examples/vega_visualization/: README.md  main.py
frontend/: .gitignore  README.md  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts
frontend/e2e/: config-form.spec.ts  config.spec.ts  console.spec.ts  coverage-options.ts  coverage-setup.ts  coverage-teardown.ts  explore.spec.ts  fixture_service.py  fixtures.ts  helpers.ts  interactions.spec.ts  jobs-bulk.spec.ts  jobs.spec.ts  map.spec.ts  ml.spec.ts  monitoring.spec.ts  resizable.spec.ts  sidebar.spec.ts
frontend/src/: App.tsx  index.css  main.tsx
guides/artifact-storage/: index.html
guides/cli-scaffolding/: index.html
guides/configuration-management/: index.html
guides/database-migrations/: index.html
guides/dataframe/: index.html
guides/deploying-to-chap-core/: index.html
guides/ml-workflows/: index.html
guides/mlproject-migrate/: index.html
guides/mlproject-migration-checklist/: index.html
guides/mlproject-runner/: index.html
guides/monitoring/: index.html
guides/r-quickstart/: index.html
guides/shell-runner-contract/: index.html
guides/task-execution/: index.html
guides/testing-ml-services/: index.html
guides/web-console/: index.html
old/: .dockerignore  Makefile  README.md
old/templates/: index.html
old/tests/: test_configs.py  (+1 more)
scripts/: bench-memory.sh  bench_memory.py
search/: search_index.json
tests/: _stubs.py  conftest.py  test_api_artifact_serialization.py  test_api_dependencies.py  test_api_routers.py  test_api_service_builder.py  test_artifact.py  test_artifact_data_schemas.py  test_artifact_download.py  test_artifact_router.py  test_artifact_serialization.py  test_artifact_service_integration.py  test_class_runner_integration.py  test_cli_artifact.py  test_cli_init.py  test_cli_migrate.py  test_cli_mlproject.py  test_cli_scaffolding.py  test_cli_test_generator.py  test_config.py  test_config_artifact_link.py  test_config_router.py  test_config_service_integration.py  test_configs.py  test_custom_entity_integration.py  test_database.py  test_dataframe.py  test_dataframe_schema.py  test_dataframe_split.py  test_example_artifact_api.py  test_example_config_api.py  test_example_library_usage_api.py  test_example_ml_basic.py  test_example_ml_class.py  test_example_ml_shell.py  test_examples_smoke.py  test_functional_runner_integration.py  test_geo_bbox.py  test_manager_config.py  test_manager_task.py  (+33 more)
(+247 files in other folders)
