[project]
name = "chapkit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Morten Hansen", email = "morten@winterop.com" }]
requires-python = ">=3.12"
dependencies = [
    "fastapi-cli>=0.0.8",
    "fastapi[standard]>=0.116.1",
    "pydantic>=2.11.7",
]

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["pytest>=8.4.1", "ruff>=0.12.10"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
docstring-code-format = true
docstring-code-line-length = "dynamic"
