[project]
name = "chapkit-demo-artifact"
version = "0.1.0"
description = "Artifact hierarchies with config linking, read-only API, and non-JSON payloads"
requires-python = ">=3.13"
dependencies = [
    "chapkit",
]

[dependency-groups]
dev = [
    "uvicorn[standard]>=0.30.0",
]

[tool.uv.sources]
chapkit = { path = "../..", editable = true }
