[project]
name = "chapkit-demo-config-artifact"
version = "0.1.0"
description = "Config-artifact linking demo with hierarchies and experiment tracking"
requires-python = ">=3.13"
dependencies = [
    "chapkit",
]

[dependency-groups]
dev = [
    "uvicorn[standard]>=0.30.0",
]

[tool.uv.sources]
chapkit = { path = "../..", editable = true }
