[project]
name = "chapkit-demo-full-featured"
version = "0.1.0"
description = "Complete showcase of all chapkit features with monitoring"
requires-python = ">=3.13"
dependencies = [
    "chapkit",
]

[dependency-groups]
dev = [
    "uvicorn[standard]>=0.30.0",
]

[tool.uv.sources]
chapkit = { path = "../..", editable = true }
