[project]
name = "chapkit-demo-ml-basic"
version = "0.1.0"
description = "Basic ML workflow with disease prediction using Linear Regression"
requires-python = ">=3.13"
dependencies = [
    "chapkit",
    "scikit-learn>=1.6.1",
    "pandas>=2.2.3",
    "geojson-pydantic>=1.1.2",
]

[dependency-groups]
dev = [
    "uvicorn[standard]>=0.30.0",
]

[tool.uv.sources]
chapkit = { path = "../..", editable = true }
