[project]
name = "chapkit-demo-ml-class"
version = "0.1.0"
description = "Class-based ML workflow with custom BaseModelRunner and feature preprocessing"
requires-python = ">=3.13"
dependencies = [
    "chapkit",
    "scikit-learn>=1.6.1",
    "pandas>=2.2.3",
    "geojson-pydantic>=1.1.2",
]

[dependency-groups]
dev = [
    "uvicorn[standard]>=0.30.0",
]

[tool.uv.sources]
chapkit = { path = "../..", editable = true }
