[project]
name = "chapkit-demo-ml-shell"
version = "0.1.0"
description = "Shell-based ML workflow using external scripts with language-agnostic approach"
requires-python = ">=3.13"
dependencies = [
    "chapkit",
    "scikit-learn>=1.6.1",
    "pandas>=2.2.3",
    "geojson-pydantic>=1.1.2",
]

[dependency-groups]
dev = [
    "uvicorn[standard]>=0.30.0",
]

[tool.uv.sources]
chapkit = { path = "../..", editable = true }
